<?xml version="1.0"?>
<package format="2">
  <name>gazebo_laser_plugin</name>
  <version>2.8.5</version>
  <description>
    Robot-independent Gazebo plugins for sensors, motors and dynamic reconfigurable components.
  </description>

  <maintainer email="pallavi.koty@gmail.com">Pallavi Koty</maintainer>

  <license>BSD, Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>Pallavi Koty</author>


  <!--
    Need to use gazebo_dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>gazebo_plugins</build_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  
    
   <build_depend>message_runtime</build_depend>
   <exec_depend>message_runtime</exec_depend> 
   
   
   <build_depend>message_generation</build_depend>
   <exec_depend>message_generation</exec_depend>  
  

  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


</package>
